--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Task management System",
+    "name": "laravel/laravel",
     "type": "project",
     "description": " Task management system designed to help teams and individuals organize, track, and complete tasks efficiently",
     "keywords":  ["task management", "project management", "productivity", "team collaboration", "task tracker", "Laravel", "workflow automation", "task organizer"],
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
+        "laravel/passport": "^12.0",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
