--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^5.1.4",
+        "bootstrap": "^5.3.3",
         "vue": "^3.5.10",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.4.5"
