--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^5.1.4",
         "bootstrap": "^5.3.3",
+        "moment": "^2.30.1",
         "vue": "^3.5.10",
         "vue-loader": "^17.4.2",
+        "vue-multiselect": "^3.1.0",
         "vue-router": "^4.4.5"
     }
 }
